<resources>
    <string name="app_name">AK News</string>
    <string name="loading">Загрузка</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="register">Регистрация</string>
    <string name="email">Email</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="please_fill">Пожалуйста заполните поле \'%1$s\'</string>
    <string name="no_internet_error">Отсутсвует соединение с сетью</string>
    <string name="default_error">Возникла ошибка при выполнении запроса. Повторите позже.</string>
    <string name="parsing_error">Возникла ошибка при обработке запроса.</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="privacy_policy_text">\n1. Термин “личная информация”, используемый в настоящем документе, определяется как любая информация, которая идентифицирует или может использоваться для идентификации, связи или поиска человека, к которому такая информация относится. Личная информация, которую мы собираем, будет являться предметом настоящей политики конфиденциальности, с вносимыми время от времени поправками.\n\n2. Данное приложение разработанно для внутреннего использования в компании ООО &quot;Эй Кей Ресторантс Раша&quot;.\n\n3. Мы запрашиваем личную информацию при регистрации сотрудников ООО &quot;Эй Кей Ресторантс Раша&quot;, данная информация необходима исключительно для внутреннего использования в компании.\n\n4. Мы не продаем контент.\n\n5. Безопасность Вашей персональной информации не будет нарушена.\n\n6. Мы не просим информацию о местоположении через наше мобильное приложение.\n\n7. Мы не отправляем на электронную почту рассылку новостей.\n</string>
    <string name="its_clear">Понятно</string>
    <string name="for_full_work_need_permissions">Для полноценной работы приложения необходимо предоставить разрешения</string>
    <string name="permissions">Разрешения</string>
    <string name="need_permissions_geo">" Для поиска по карте необходимо предоставить доступ к геолокации"</string>
    <string name="need_permissions_global">Для полноценной рабоы приложения необходимо предоставить разрешения</string>
    <string name="try_again">Try again</string>
    <string name="later">Later</string>
    <string name="to_settings">To Settings</string>
    <string name="gallery">Галлерея</string>
    <string name="camera">Камера</string>
    <string name="save">Сохранить</string>
    <string name="enter_valid_email">Введите корректный email</string>
    <string name="password_recover">Восстановление пароля</string>
    <string name="for_password_recover">Для восстановления пароля введите ваш email. На него придет письмо с инструкцией по восстановлению.</string>
    <string name="recover">Восстановить</string>
    <string name="new_event">Новое событие</string>
    <string name="date">Дата</string>
    <string name="category">Категория</string>
    <string name="news_ak">Новости A.K.</string>
    <string name="news_csl">Новости Csl</string>
    <string name="news_adding">Добавление новости</string>
    <string name="otvetstennoe_face">Ответственное лицо</string>
    <string name="name_nazvanie">Название</string>
    <string name="news_type">Тип новости</string>
    <string name="text">Текст</string>
    <string name="fotos">Фотографии</string>
    <string name="files">Файлы</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="deleting">Удаление</string>
    <string name="delete_this_image">Удалить данное изображение?</string>
    <string name="file_choosing">Выбор файлов</string>
    <string name="delete_this_file_from_news">Удалить данный файл из новости?</string>
    <string name="create">Создать</string>
    <string name="files_added">Добавлено файлов:</string>
    <string name="news_editing">Редактирование новости</string>
    <string name="event_editing">Редактирование события</string>
    <string name="watch">Смотреть</string>
    <string name="search_and_filter">Поиск и фильтрация</string>
    <string name="search">Поиск</string>
    <string name="apply">Применить</string>
    <string name="rb_sort">Сортировка</string>
    <string name="by_default">По умолчанию</string>
    <string name="by_name">По названию</string>
    <string name="by_category">По категории</string>
    <string name="by_author">По автору</string>
    <string name="categories">Категории</string>
    <string name="all">Все</string>
    <string name="exit">Выход</string>
    <string name="exit_without_save">Выйти из редактирования без сохранения?</string>
    <string name="make_exit">Выйти</string>
    <string name="exit_current_account">Выйти из текущего акаунта?</string>
    <string name="all_news">Все новости</string>
    <string name="any_dates">Любые даты</string>
    <string name="notify_chanel_aknews">Уведомления о событиях в приложении</string>
</resources>